# system_call

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Minestrone.md  README.md  _signal.c  _signal.h  clean.sh  client_0  client_0.c  defines.c  defines.h  fifo.c  fifo.h  how b607  message_queue.c  message_queue.h  prova.c  semaphore.c  semaphore.h  server  server.c  shared_memory.c  shared_memory.h
Clion/: CMakeLists.txt
Clion/inc/: defines.h  err_exit.h
amos/tester_make/: Makefile  defines.c  defines.h  err_exit.c  err_exit.h  main.c  tester
doc/html/: defines_8c.html  defines_8c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen.css  err__exit_8c.html  fifo_8c.html  files.html  globals.html  globals_func.html  index.html  navtree.css  navtreedata.js  navtreeindex0.js  semaphore_8c.html  shared__memory_8c.html
doc/latex/: defines_8c.tex  err__exit_8c.tex  fifo_8c.tex  files.tex  refman.tex  semaphore_8c.tex  shared__memory_8c.tex
inc/: CMakeLists.txt  _signal.h  defines.h  err_exit.h  fifo.h  message_queue.h  segnali.h  semaphore.h  shared_memory.h
myDir/: sendme_132970923_out  sendme_1889_out  sendme_2739_out  sendme_296616573_out  sendme_303199755_out  sendme_409332772_out  sendme_4341_out  sendme_656011452_out  sendme_707879049_out
myDir2/: sendme_001633980_out  sendme_061670340_out  sendme_089653286_out  sendme_113287352  sendme_113287352_out  sendme_186053124_out  sendme_209736817_out  sendme_241758588_out  sendme_242731647_out  sendme_278957765_out  sendme_307519931_out  sendme_328476896_out  sendme_479346341_out  sendme_547234699_out  sendme_576760232_out  sendme_602996827_out  sendme_614183966  sendme_678123400_out  sendme_683092701_out  sendme_781363455_out  sendme_811279704_out  sendme_896351945_out  sendme_896389625  sendme_897669119_out  sendme_922880296_out  sendme_989055573_out
myDir2/a/: sendme_008881582  sendme_288250499  sendme_345387652
myDir2/aa/: sendme_006452311_out  sendme_026961537_out  sendme_086009726_out  sendme_088851558_out  sendme_094112869_out  sendme_166971388_out  sendme_167111202_out  sendme_184129068_out  sendme_203137207  sendme_203137207_out  sendme_283852969_out  sendme_291482399_out  sendme_325728758_out  sendme_387235070_out  sendme_389164737_out  sendme_401154989_out  sendme_422172536_out  sendme_441190619_out  sendme_467020446_out  sendme_474798662_out  (+16 more)
smanetto/: prova  prova-void  prova-void.c  prova.c  prova2  prova2.c  prova3  prova3.c
src/: CMakeLists.txt  _signal.c  client_0.c  defines.c  err_exit.c  fifo.c  message_queue.c  segnali.c  semaphore.c  server.c  shared_memory.c
src/client/: client_0.c
tester_folder/: sendme_1829_out  sendme_1889_out  sendme_2163  sendme_2163_out  sendme_225_out.txt  sendme_2537_out  sendme_2739_out  sendme_2814_out  sendme_3652_out  sendme_3844_out  sendme_3983_out  sendme_4341_out  sendme_4487_out  sendme_4553  sendme_4553_out  sendme_4962  sendme_5238_out  sendme_542_out  sendme_5707_out  sendme_5714_out  sendme_574_out  sendme_5903_out  sendme_6010  sendme_6198_out  sendme_6297  sendme_6297_out  sendme_6653_out  sendme_6952_out  sendme_7051_out  sendme_7132_out  sendme_7199_out  sendme_756_out  sendme_7598_out  sendme_7724_out  sendme_773  sendme_773_out  sendme_8201_out  sendme_8330_out  sendme_851.txt.._out.txt  sendme_851_out  (+9 more)
(+390 files in other folders)
